--- a/hu.bme.aut.gergelyszaz.BGS/.classpath
+++ b/hu.bme.aut.gergelyszaz.BGS/.classpath
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.xtend.XTEND_CONTAINER"/>
-	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.4.v201409021027.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.4.v201409021027.jar">
+	<classpathentry kind="lib" path="D:/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/org.eclipse.xtext_2.7.3.v201411190455.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/org.eclipse.xtext.source_2.7.3.v201411190455.jar">
+	<classpathentry kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
+		<accessrules>
+			<accessrule kind="accessible" pattern="com/google/inject/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
+			<accessrule kind="discouraged" pattern="com/google/inject/internal/*"/>
+			<accessrule kind="discouraged" pattern="com/google/inject/internal/util/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/matcher/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/name/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/spi/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/util/*"/>
+			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
+		</accessrules>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/*"/>
@@ -28,6 +41,11 @@
 			<accessrule kind="discouraged" pattern="org/eclipse/xtext/findReferences/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/impl/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/debug/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/internal/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/internal/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/generator/*"/>
 			<accessrule kind="discouraged" pattern="org/eclipse/xtext/generator/trace/*"/>
 			<accessrule kind="discouraged" pattern="org/eclipse/xtext/grammaranalysis/*"/>
@@ -62,6 +80,7 @@
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/containers/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/generic/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/impl/*"/>
+			<accessrule kind="discouraged" pattern="org/eclipse/xtext/resource/persistence/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/impl/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/serializer/*"/>
@@ -82,25 +101,8 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.ecore_2.10.2.v20150123-0348.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.ecore.source_2.10.2.v20150123-0348.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/plugin/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.common_2.10.1.v20150123-0348.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.common.source_2.10.1.v20150123-0348.jar">
+	<classpathentry kind="lib" path="D:/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
@@ -108,49 +110,6 @@
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/impl/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.mwe.core_1.3.4.v201409021027.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/org.eclipse.emf.mwe.core_1.3.4.v201409021027.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/ant/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/ao/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/config/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/container/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/customizer/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/debug/model/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/debug/processing/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/issues/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/lib/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/monitor/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/core/resources/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/internal/core/ant/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/ast/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/ast/parser/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/ast/util/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/ast/util/converter/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/communication/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/communication/packages/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/model/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/mwe/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/processing/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/debug/processing/handlers/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/emf/mwe/internal/core/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/Other/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="G:/Gergo/Other/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="com/google/inject/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
-			<accessrule kind="discouraged" pattern="com/google/inject/internal/*"/>
-			<accessrule kind="discouraged" pattern="com/google/inject/internal/util/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/matcher/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/name/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/spi/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/util/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
