--- a/hu.bme.aut.gergelyszaz.BGS/.classpath
+++ b/hu.bme.aut.gergelyszaz.BGS/.classpath
@@ -4,14 +4,37 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
+	<classpathentry exported="true" kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
+	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
 		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/command/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/impl/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/common/util/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
+	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
+		<accessrules>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/plugin/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/impl/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/util/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/impl/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/util/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/impl/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/internal/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/util/*"/>
+			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
+		</accessrules>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/*"/>
@@ -88,48 +111,24 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar"/>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
+	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
 		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/command/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/util/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
+			<accessrule kind="discouraged" pattern="com/google/inject/internal/*"/>
+			<accessrule kind="discouraged" pattern="com/google/inject/internal/util/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/matcher/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/name/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/spi/*"/>
+			<accessrule kind="accessible" pattern="com/google/inject/util/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.104.1.v20150825-0743.jar" sourcepath="D:/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64.source_3.104.1.v20150825-0743.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/D:/eclipse/plugins/org.eclipse.platform.doc.isv_4.5.1.v20150903-1352.jar!/reference/api"/>
-		</attributes>
+	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
 		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/accessibility/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/awt/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/browser/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/custom/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/dnd/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/events/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/graphics/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/layout/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/opengl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/printing/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/program/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/widgets/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/image/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/theme/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/mozilla/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/swt/ole/win32/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/gdip/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/ole/win32/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/win32/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/swt/internal/opengl/win32/*"/>
+			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="G:/Gergo/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
