--- a/simple-heroku-webapp/pom.xml
+++ b/simple-heroku-webapp/pom.xml
@@ -51,6 +51,38 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
+        	<artifactId>hu.bme.aut.gergelyszaz.BGS</artifactId>
+        	<version>1.0-SNAPSHOT</version>
+        	<scope>system</scope>
+        	<systemPath>D:/Work/dipterv/bglworkspace/board-game-simulator/hu.bme.aut.gergelyszaz.BGS/hu.bme.aut.gergelyszaz.BGS.jar</systemPath>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.emf</groupId>
+        	<artifactId>org.eclipse.emf.common</artifactId>
+        	<version>2.11.0-v20150805-0538</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.emf</groupId>
+        	<artifactId>org.eclipse.emf.ecore</artifactId>
+        	<version>2.11.1-v20150805-0538</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.xtext</groupId>
+        	<artifactId>org.eclipse.xtext</artifactId>
+        	<version>2.9.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>com.google.inject</groupId>
+        	<artifactId>guice</artifactId>
+        	<version>4.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.emf</groupId>
+        	<artifactId>org.eclipse.emf.mwe.utils</artifactId>
+        	<version>1.3.13</version>
+        </dependency>
     </dependencies>
 
     <build>
