--- a/hu.bme.aut.gergelyszaz.BGS/.classpath
+++ b/hu.bme.aut.gergelyszaz.BGS/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
-	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
+	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
@@ -16,7 +16,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
+	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
@@ -34,7 +34,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
+	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/*"/>
@@ -111,7 +111,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
+	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="com/google/inject/*"/>
 			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
@@ -124,7 +124,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
+	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
