--- a/simple-heroku-webapp/.classpath
+++ b/simple-heroku-webapp/.classpath
@@ -52,20 +52,17 @@
   <classpathentry kind="lib" path="D:/Work/dipterv/bglworkspace/board-game-simulator/hu.bme.aut.gergelyszaz.BGS/hu.bme.aut.gergelyszaz.BGS.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.common/2.11.0-v20150805-0538/org.eclipse.emf.common-2.11.0-v20150805-0538.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore/2.11.1-v20150805-0538/org.eclipse.emf.ecore-2.11.1-v20150805-0538.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext/2.9.1/org.eclipse.xtext-2.9.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.util/2.9.1/org.eclipse.xtext.util-2.9.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/inject/guice/4.0/guice-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext/2.8.4/org.eclipse.xtext-2.8.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.util/2.8.4/org.eclipse.xtext.util-2.8.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/inject/guice/3.0/guice-3.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtend/org.eclipse.xtend.lib/2.9.1/org.eclipse.xtend.lib-2.9.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.xbase.lib/2.9.1/org.eclipse.xtext.xbase.lib-2.9.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtend/org.eclipse.xtend.lib.macro/2.9.1/org.eclipse.xtend.lib.macro-2.9.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/tycho/org.eclipse.jdt.core/3.10.0.v20140604-1726/org.eclipse.jdt.core-3.10.0.v20140604-1726.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.xbase.lib/2.8.4/org.eclipse.xtext.xbase.lib-2.8.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore.xmi/2.11.1-v20150805-0538/org.eclipse.emf.ecore.xmi-2.11.1-v20150805-0538.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/ibm/icu/icu4j/52.1/icu4j-52.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.2/antlr-runtime-3.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/equinox/org.eclipse.equinox.common/3.6.0/org.eclipse.equinox.common-3.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.utils/1.3.13/org.eclipse.emf.mwe.utils-1.3.13.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.core/1.3.13/org.eclipse.emf.mwe.core-1.3.13.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe2.runtime/2.8.3/org.eclipse.emf.mwe2.runtime-2.8.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.2/commons-cli-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.utils/1.3.11/org.eclipse.emf.mwe.utils-1.3.11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.core/1.3.11/org.eclipse.emf.mwe.core-1.3.11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
 </classpath>
