--- a/simple-heroku-webapp/pom.xml
+++ b/simple-heroku-webapp/pom.xml
@@ -71,17 +71,37 @@
         <dependency>
         	<groupId>org.eclipse.xtext</groupId>
         	<artifactId>org.eclipse.xtext</artifactId>
-        	<version>2.9.1</version>
+        	<version>2.8.4</version>
         </dependency>
         <dependency>
         	<groupId>com.google.inject</groupId>
         	<artifactId>guice</artifactId>
-        	<version>4.0</version>
+        	<version>3.0</version>
         </dependency>
         <dependency>
         	<groupId>org.eclipse.emf</groupId>
         	<artifactId>org.eclipse.emf.mwe.utils</artifactId>
-        	<version>1.3.13</version>
+        	<version>1.3.11</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.emf</groupId>
+        	<artifactId>org.eclipse.emf.mwe.core</artifactId>
+        	<version>1.3.11</version>
+        </dependency>
+        <dependency>
+        	<groupId>commons-logging</groupId>
+        	<artifactId>commons-logging</artifactId>
+        	<version>1.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.core</groupId>
+        	<artifactId>runtime</artifactId>
+        	<version>3.10.0-v20140318-2214</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.xtext</groupId>
+        	<artifactId>org.eclipse.xtext.common.types</artifactId>
+        	<version>2.8.4</version>
         </dependency>
     </dependencies>
 
