A lot of refactoring. The standalone gui application doesn't work anymore. Needs to be remade to fit the changes done in BGS.
Former-commit-id: 922308cd1b740e673a3c60ba88827021887454fb

--- a/hu.bme.aut.gergelyszaz.BGS.Server/.project
+++ b/hu.bme.aut.gergelyszaz.BGS.Server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hu.bme.aut.gergelyszaz.BGS.Server</name>
+	<name>hu.bme.aut.gergelyszaz.BGS.server</name>
 	<comment></comment>
 	<projects>
 	</projects>
