--- a/hu.bme.aut.gergelyszaz.BGS/.classpath
+++ b/hu.bme.aut.gergelyszaz.BGS/.classpath
@@ -1,134 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.xtend.XTEND_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="xtend-gen"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="var" path="M2_REPO/javax/inject/javax.inject/1/javax.inject-1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry exported="true" kind="src" path="/hu.bme.aut.gergelyszaz.BGL"/>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/command/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/plugin/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/parseTreeConstruction/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/common/parser/packrat/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/common/parser/packrat/consumers/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/services/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/conversion/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/conversion/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/debug/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/diagnostics/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/documentation/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/documentation/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/findReferences/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/debug/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/internal/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/generator/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/generator/trace/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/grammaranalysis/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/grammaranalysis/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/lazy/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/mwe/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/naming/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/nodemodel/serialization/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/util/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parseTreeConstruction/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/antlr/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/antlr/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/consumers/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/debug/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/internal/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/matching/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/tokens/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parsetree/reconstr/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parsetree/reconstr/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/preferences/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/resource/clustering/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/containers/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/generic/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/resource/persistence/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/serializer/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/acceptor/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/analysis/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/diagnostic/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/sequencer/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/tokens/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/service/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/services/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/tasks/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/validation/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/validation/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/xtext/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/xtext/ecoreInference/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="com/google/inject/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
-			<accessrule kind="discouraged" pattern="com/google/inject/internal/*"/>
-			<accessrule kind="discouraged" pattern="com/google/inject/internal/util/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/matcher/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/name/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/spi/*"/>
-			<accessrule kind="accessible" pattern="com/google/inject/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="lib" path="BGL.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.common/2.11.0-v20150805-0538/org.eclipse.emf.common-2.11.0-v20150805-0538.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore/2.11.1-v20150805-0538/org.eclipse.emf.ecore-2.11.1-v20150805-0538.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext/2.8.4/org.eclipse.xtext-2.8.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.util/2.8.4/org.eclipse.xtext.util-2.8.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/14.0.1/guava-14.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/inject/guice/3.0/guice-3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/tycho/org.eclipse.jdt.core/3.10.0.v20140604-1726/org.eclipse.jdt.core-3.10.0.v20140604-1726.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.xbase.lib/2.8.4/org.eclipse.xtext.xbase.lib-2.8.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.ecore.xmi/2.11.1-v20150805-0538/org.eclipse.emf.ecore.xmi-2.11.1-v20150805-0538.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/ibm/icu/icu4j/52.1/icu4j-52.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.2/antlr-runtime-3.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.utils/1.3.11/org.eclipse.emf.mwe.utils-1.3.11.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.mwe.core/1.3.11/org.eclipse.emf.mwe.core-1.3.11.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.common.types/2.8.4/org.eclipse.xtext.common.types-2.8.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/eclipse/emf/org.eclipse.emf.codegen/2.11.0-v20150806-0404/org.eclipse.emf.codegen-2.11.0-v20150806-0404.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-commons/5.0.1/asm-commons-5.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-tree/5.0.1/asm-tree-5.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm/5.0.1/asm-5.0.1.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
