Seperated Client websocket code. Replaced my jsonifier with gson method.
Former-commit-id: e5dcd7ce4cbad3915cc039e044335d170b8f14d0

--- a/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
@@ -40,6 +40,11 @@
 			<version>20151123</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+		<dependency>
 			<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
 			<artifactId>hu.bme.aut.gergelyszaz.BGS</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
