--- a/hu.bme.aut.gergelyszaz.BGS.Application/.classpath
+++ b/hu.bme.aut.gergelyszaz.BGS.Application/.classpath
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="con" path="org.eclipse.xtend.XTEND_CONTAINER"/>
 	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" output="target/classes" path="xtend-gen">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -18,7 +13,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.104.1.v20150825-0743.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64.source_3.104.1.v20150825-0743.jar">
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.104.1.v20150825-0743.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64.source_3.104.1.v20150825-0743.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/D:/Program%20Files/Eclipse/eclipse/plugins/org.eclipse.platform.doc.isv_4.5.1.v20150903-1352.jar!/reference/api"/>
 		</attributes>
@@ -48,7 +43,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/eclipse/plugins/org.eclipse.emf.common_2.11.0.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.common.source_2.11.0.v20150805-0538.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
@@ -59,7 +54,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/eclipse/plugins/org.eclipse.emf.ecore_2.11.1.v20150805-0538.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.ecore.source_2.11.1.v20150805-0538.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
 			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
@@ -77,84 +72,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext_2.8.4.v201508050135.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.xtext.source_2.8.4.v201508050135.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/parseTreeConstruction/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/common/parser/packrat/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/common/parser/packrat/consumers/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/common/services/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/conversion/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/conversion/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/debug/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/diagnostics/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/documentation/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/documentation/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/findReferences/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/formatting/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/debug/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/internal/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/formatting2/regionaccess/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/generator/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/generator/trace/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/grammaranalysis/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/grammaranalysis/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/linking/lazy/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/mwe/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/naming/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/nodemodel/serialization/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/nodemodel/util/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parseTreeConstruction/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/antlr/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/antlr/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parser/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/consumers/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/debug/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/internal/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/matching/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/parser/packrat/tokens/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parsetree/reconstr/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/parsetree/reconstr/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/preferences/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/resource/clustering/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/containers/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/generic/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/resource/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/resource/persistence/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/scoping/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/serializer/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/acceptor/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/analysis/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/diagnostic/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/sequencer/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/serializer/tokens/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/service/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/services/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/tasks/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/validation/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/xtext/validation/impl/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/xtext/*"/>
-			<accessrule kind="discouraged" pattern="org/eclipse/xtext/xtext/ecoreInference/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/com.google.inject.source_3.0.0.v201312141243.jar">
 		<accessrules>
 			<accessrule kind="accessible" pattern="com/google/inject/*"/>
 			<accessrule kind="accessible" pattern="com/google/inject/binder/*"/>
@@ -168,12 +86,6 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="src" path="/hu.bme.aut.gergelyszaz.BGS"/>
-	<classpathentry kind="lib" path="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar" sourcepath="D:/Program Files/Eclipse/eclipse/plugins/org.eclipse.emf.mwe.utils_1.3.11.v201508030321.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/mwe/utils/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/Server"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
