--- a/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
@@ -33,8 +33,8 @@
   <dependencies>
   	<dependency>
   		<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
-  		<artifactId>Server</artifactId>
-  		<version>1.0-SNAPSHOT</version>
+  		<artifactId>hu.bme.aut.gergelyszaz.BGS.Server</artifactId>
+  		<version>1.0</version>
   	</dependency>
   </dependencies>
 </project>
