--- a/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
-	<artifactId>Server</artifactId>
+	<artifactId>hu.bme.aut.gergelyszaz.BGS.Server</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>wordgame</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -47,7 +47,21 @@
 		<dependency>
 			<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
 			<artifactId>hu.bme.aut.gergelyszaz.BGS</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
+	<build>
+	<plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>2.3.2</version>
+      <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        <encoding>UTF-8</encoding>
+      </configuration>
+    </plugin>
+  </plugins>
+	</build>
 </project>
