--- a/hu.bme.aut.gergelyszaz.BGS/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
 	<artifactId>hu.bme.aut.gergelyszaz.BGS</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
