Added server functionality to Application. Made a runnable jar from it.
Former-commit-id: e061c90f6db371c5101b1bff9bbd5f807ea8d3db

--- a/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Server/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>hu.bme.aut.gergelyszaz.BGS.Server</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0</version>
-	<name>wordgame</name>
+	<name>hu.bme.aut.gergelyszaz.BGS.Server</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
