--- a/hu.bme.aut.gergelyszaz.BGS.Application/src/resources/properties/TicTacToe.properties
+++ b/hu.bme.aut.gergelyszaz.BGS.Application/src/resources/properties/TicTacToe.properties
@@ -1,4 +1,6 @@
 board=/resources/images/tictactoe.png
+X=/resources/images/X.png
+O=/resources/images/O.png
 F11=0.15,0.15
 F12=0.15,0.5
 F13=0.15,0.85
