--- a/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
@@ -1,62 +1,63 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>hu.bme.aut.gergelyszaz.BGS.Application</groupId>
-  <artifactId>hu.bme.aut.gergelyszaz.BGS.Application</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>xtend-gen</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-	<plugin>
-  <groupId>org.eclipse.xtend</groupId>
-  <artifactId>xtend-maven-plugin</artifactId>
-  <version>2.9.0</version>
-  <executions>
-    <execution>
-      <goals>
-        <goal>compile</goal>
-        <goal>testCompile</goal>
-      </goals>
-      <configuration>
-        <outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
-        <testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
-      </configuration>
-    </execution>
-  </executions>
-</plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-  <dependency>
-  <groupId>org.eclipse.xtend</groupId>
-  <artifactId>org.eclipse.xtend.lib</artifactId>
-  <version>2.9.0</version>
-</dependency>
-    <dependency>
-      <groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
-      <artifactId>hu.bme.aut.gergelyszaz.BGS.Server</artifactId>
-      <version>1.0</version>
-    </dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+    <artifactId>bgs-application</artifactId>
+    <version>1.0</version>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>xtend-gen</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.xtend</groupId>
+                <artifactId>xtend-maven-plugin</artifactId>
+                <version>2.9.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
+                            <testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <artifactId>bgs-server-application</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
