--- a/hu.bme.aut.gergelyszaz.BGS/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
-    <artifactId>hu.bme.aut.gergelyszaz.BGS</artifactId>
+    <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+    <artifactId>bgs</artifactId>
     <version>1.0</version>
     <build>
         <sourceDirectory>src</sourceDirectory>
