Git ignore files generated from BGL.
Former-commit-id: 9c813103d2678a8a212f1c9c7c7f27a9402941bd

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 out/
 *.idea
 */classes/
+BGL/model/
+BGL/src/hu/bme/aut/gergelyszaz/BGLRuntimeModule.xtend
+BGL/src/hu/bme/aut/gergelyszaz/BGLStandaloneSetup.xtend
+BGL/src/hu/bme/aut/gergelyszaz/generator/
+BGL/src/hu/bme/aut/gergelyszaz/scoping/
+BGL/src/hu/bme/aut/gergelyszaz/validation/
