--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -4,6 +4,11 @@
     <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
     <artifactId>bgs-application</artifactId>
     <version>1.0</version>
+    <parent>
+        <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+        <artifactId>bgl-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -24,7 +29,7 @@
             <plugin>
                 <groupId>org.eclipse.xtend</groupId>
                 <artifactId>xtend-maven-plugin</artifactId>
-                <version>2.9.0</version>
+                <version>${xtendVersion}</version>
                 <executions>
                     <execution>
                         <goals>
