--- a/BGS/pom.xml
+++ b/BGS/pom.xml
@@ -4,6 +4,11 @@
     <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
     <artifactId>bgs</artifactId>
     <version>1.0</version>
+    <parent>
+        <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+        <artifactId>bgl-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -88,7 +93,7 @@
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext</artifactId>
-            <version>2.10.0</version>
+            <version>${xtextVersion}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -108,7 +113,7 @@
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.common.types</artifactId>
-            <version>2.8.4</version>
+            <version>${xtextVersion}</version>
         </dependency>
         
         <dependency>
