Split Server project to Server and Client projects.
Former-commit-id: 7991b6a734d875b2b94104a7f24e926a0d5aa219

--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -79,5 +79,10 @@
             <artifactId>bgs-server-application</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <artifactId>bgs-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
