Renamed Server artifiactId id
Former-commit-id: 5bec660af4bafe67cb911edd011f3255aef5f16d

--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -76,7 +76,7 @@
         </dependency>
         <dependency>
             <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
-            <artifactId>bgs-server-application</artifactId>
+            <artifactId>bgs-server</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
