Moved gamestate to its own State project.
Former-commit-id: 64803950e242d5fa4b7e0621d9b157ec0ace7576

--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -12,6 +12,11 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>hu.bme.aut.gergelyszaz.BGS</groupId>
+            <artifactId>State</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.0</version>
