--- a/BGS/pom.xml
+++ b/BGS/pom.xml
@@ -76,6 +76,11 @@
             <version>1.1</version>
         </dependency>
         <dependency>
+            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <artifactId>state</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.xtend</groupId>
             <artifactId>org.eclipse.xtend.lib</artifactId>
             <version>2.9.0</version>
