--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>BGL</module>
 		<module>BGS</module>
+		<module>State</module>
 		<module>Server</module>
 		<module>Client</module>
 		<module>Application</module>
