[Not working] code rearrangements, added test, and rewritten xtend classes to java in BGS
Former-commit-id: 7ab4ad7df9c1ce0b03a2cfb525f0dc8b87c9ca75

--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
@@ -37,8 +38,12 @@
                             <goal>testCompile</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
-                            <testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+                            <outputDirectory>
+                                ${project.build.directory}/xtend-gen/main
+                            </outputDirectory>
+                            <testOutputDirectory>
+                                ${project.build.directory}/xtend-gen/test
+                            </testOutputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -53,19 +58,19 @@
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.2.1</version>
-                    <executions>
-                         <execution>
-                             <goals>
-                                 <goal>java</goal>
-                             </goals>
-                         </execution>
-                     </executions>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <mainClass>graphics.LoadWindow</mainClass>
                 </configuration>
-            </plugin>     
+            </plugin>
         </plugins>
     </build>
     <dependencies>
