xtend dependency version corrected.
Former-commit-id: 4f89dcb68b9d0375541212921d5b53fc8b2f1a0d

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 <plugin>
                     <groupId>org.eclipse.xtend</groupId>
                     <artifactId>xtend-maven-plugin</artifactId>
-                    <version>${xtextVersion}</version>
+                    <version>${xtendVersion}</version>
                     <executions>
                         <execution>
                             <goals>
